# C_Homework

./: .gitignore  README.md
Homework_2/: flipping_the_array.c  incomplete_quotient.c
src/Homework_1/: hello_world.c
src/Homework_2/: counting_lucky_tickets.c  fast_polynomial_calculation.c  flipping_the_array.c  incomplete_quotient.c
src/Homework_3/: number_of_zero_elements.c  simple_balance_of_brackets.c  substring_search.c
src/Homework_4/: assembly_instructions.md  optimal_sorting.c  optimal_sorting.h  optimal_sorting.s
src/Homework_5/: Makefile  advancedBalanceOfBrackets.c  advanced_balance_of_brackets.c  checkingForASymbol.c  checkingForASymbol.h  implementationOfStack.c  implementationOfStack.h  shuntingYard.c
src/Homework_6/: Makefile  countingRhyme.c  operationsForList.c  operationsForList.h  operationsForSortedList.c  operationsForSortedList.h  sortedList.c  testsForSortedList.c
src/Homework_8/: CMakeLists.txt  implementationOfStack.c  implementationOfStack.h
src/Homework_8/Stack/: implementationOfStack.h
src/Homework_8/advancedBalanceOfBrackets/: advancedBalanceOfBrackets.c
src/Homework_8/shuntingYard/: checkingForASymbol.c  checkingForASymbol.h  shuntingYard.c
src/Test1/: task1.c  task3.c
